# game2024

./: .gitignore  .gitmodules  CMakeLists.txt  nob.c  nob.h
src/: keywords.c  lexer.c  lexer.h  main.c  main.cpp  nob.h  parser.c  parser.h
src/core/: application.cpp  application.h  base.h  window.h
src/platform/: glfwwindow.cpp  glfwwindow.h  macoswindow.h  macoswindow.mm  metalrenderer.h  metalrenderer.mm
src/renderer/: renderer.cpp  renderer.h
